# MasterThesis

./: .gitignore  requirements-tfm.txt
nn2logic/: .gitignore  CMakeLists.txt  README.md
nn2logic/cmake/: FindGUROBI.cmake
nn2logic/src/: CMakeLists.txt  Encoder.hpp  IndicatorWorklist.hpp  MultiProgress.hpp  Path.cpp  Path.hpp  Settings.hpp  SimplePool.hpp  StorageAdaptor.hpp  bindings.cpp
nn2logic/src/analytics/: Analyze.cpp  Analyze.hpp  CMakeLists.txt
nn2logic/src/codegen/: CMakeLists.txt  PathScheduler.hpp  c.cpp  c.hpp  container.hpp
nn2logic/src/codegen2/: CMakeLists.txt  IRmodel.hpp  hybrid.cpp  hybrid.hpp  renderPlain.cpp  renderPlain.hpp  test.cpp  test.hpp  visitors.hpp
nn2logic/src/quant/: CMakeLists.txt  ConstraintTracker.hpp  CycleGuesstimator.hpp  Decision.hpp  Exchange.cpp  Exchange.hpp  Leaf.hpp  MulSkipOptimizer.hpp  Node.hpp  Order.hpp  PermScheduler.hpp  Placeholder.hpp  SEvaluator.hpp  ScoreKeeper.hpp  SequentialCreator.hpp  SequentialLeaf.hpp  SimulatedAnnealing.hpp  VarFac.hpp  Worker.hpp
nn2logic/src/sim/: CMakeLists.txt  CompilerAdaptor.cpp  CompilerAdaptor.hpp  Runner.hpp
nn2logic/src/sim/template/: Makefile  hybrid-opt.txt  main.c  network.h
nn2logic/src/sim/template/common/: syscalls.c
qat-mnist/: check_nn2logic_solver.py  check_solver.py  eval_tree_json.py  eval_tree_json_ultralight.py  install_msvc_runtime.ps1  modelQ.ipynb  modelQ.py  modelQ_lowram.py  modelQ_ultralight.py  run_pipeline.ps1  run_ultralight_server.sh  run_with_mem_limit.sh  setup_env.ps1
